--- a/exp/src/main/AndroidManifest.xml
+++ b/exp/src/main/AndroidManifest.xml
@@ -13,24 +13,22 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
+       <!-- <activity
             android:name=".FileexplorerActivity"
             android:label="@string/title_activity_fileexplorer">
-            <!--android:theme="@android:style/Theme.Holo"--> >
-           <!-- <intent-filter>
+            &lt;!&ndash;android:theme="@android:style/Theme.Holo"&ndash;&gt; >
+&lt;!&ndash;
+           <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
-
-        </activity>
+            </intent-filter>&ndash;&gt;
+        </activity>-->
         
         <activity
             android:name=".FileChooser"
             android:label="Choose File" >
-<!--
-             android:theme="@android:style/Theme.Holo">
--->
+            android:theme="@android:style/Theme.Holo">
                 <action android:name="com.example.fileexplorer.FileChooser" />
 
                 <category android:name="android.intent.category.DEFAULT" /> 
