--- a/exp/build.gradle
+++ b/exp/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 16
+    compileSdkVersion 22
     buildToolsVersion "22.0.1"
 
     defaultConfig {
@@ -9,7 +9,7 @@ android {
         applicationId "com.example.fileexplorer"
 */
         minSdkVersion 8
-        targetSdkVersion 15
+        targetSdkVersion 22
     }
 
     buildTypes {
@@ -22,4 +22,5 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:18.0.0'
+    //compile project(':peers')
 }
